...
    <string name="MP_nok">Meeting Point not defined</string>
    <string name="location_unavailable">Location services are unavailable</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="remove_favorites">Remove from favorites</string>
    <string name="unable_load_image">Unable to load image</string>
    <string name="take_picture_fail">Unable to take picture</string>
    <string name="edit">Edit</string>
    <string name="incorrect_fields">One or more fields are missing</string>
    <string name="default_spinner_text">Select category…</string>
    <string name="object_not_found">This listing was deleted</string>
    <string name="search_title">Search listings</string>
    <string name="search_hint">Search listings</string>
    <string name="no_search_results">No matching results for:</string>
...
    <string name="bottom_navigation_messages">Messages</string>
    <string name="bottom_navigation_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="listing_title">Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="upload_image">upload image</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="loading">LOADING</string>
...
    <string name="max">max:&#160;</string>
    <string name="price_filter">Price:</string>
    <string name="category_filter">Category:</string>
    <string name="days_filter">Online since:</string>
    <string name="CHF">&#160;CHF</string>
    <string name="Select">Select...</string>
    <string name="save">Save</string>
    <string name="field_cant_be_empty">Field cannot be empty</string>
    <string name="password_lowercase">Password should contain at least one lower case letter</string>
    <string name="password_uppercase">Password should contain at least one upper case letter</string>
    <string name="password_digit">Password should contain at least one digit</string>
    <string name="password_too_short">Password should be at least</string>
    <string name="char_long">characters long</string>
...
