...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".category.CategoryFragment">

    <Button
        android:id="@+id/categoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_space_large"
        android:textSize="@dimen/large_button_text_size"
        android:padding="8dp"
        android:background="@drawable/rounded_corner_button_colored"
...
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </ScrollView>

...
