...
                android:layout_marginTop="@dimen/inter_space_extra_large"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_title_length">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_space_small"
                android:background="@drawable/boxed"
                android:importantForAutofill="no"
                android:hint="@string/title"
...
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/selectCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginTop="@dimen/button_shadow_margin"
                    android:layout_marginBottom="@dimen/button_shadow_margin"
                    android:layout_weight="0.01"
...
