<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="wrap_content">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_black_18dp"
        android:title="@string/bottom_navigation_home" />
    <item
        android:id="@+id/action_add_item"
        android:enabled="true"
...
